# k-baas-2

./: .env.example  .env.production.example  .env.test  .gitattributes  .gitignore  .mcp.json  .roomodes  AGENTS.md  CLAUDE.md  MCP-GITHUB-PROJECT-MANAGER-SETUP.md  MCP-SETUP-SAFE.md  README github-issue-manager.md  README.md  debug-basic.js  debug-mcp.js  debug-tools.js  docker-compose.authentik.yml  docker-compose.base.yml  docker-compose.prod.yml  docker-compose.yml  docker-setup-reference.md  env.template  github-issue-manager.sh  kbaas  mcp-config.example.json  package-lock.json  package.json  test-mcp-setup.sh
.ai/: core-dump-1.md  core-dump-2.md
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-core/agents/: dev.md  po.md  qa.md
.bmad-core/checklists/: architect-checklist.md  story-dod-checklist.md  story-draft-checklist.md
.bmad-core/data/: bmad-kb.md  cucumber-integration.md  gherkin-standards.md  test-priorities-matrix.md
.bmad-core/tasks/: apply-qa-fixes.md  brownfield-create-epic.md  brownfield-create-story.md  create-api-security-tests.md  create-feature-files.md  create-next-story.md  github-sync.md  qa-gate.md  review-story.md  risk-profile.md  test-design.md  trace-requirements.md  validate-next-story.md
.bmad-core/templates/: prd-tmpl.yaml  story-tmpl.yaml
.bmad-core/workflows/: brownfield-fullstack.yaml  brownfield-service.yaml  brownfield-ui.yaml  greenfield-fullstack.yaml  greenfield-service.yaml  greenfield-ui.yaml
.roo/: mcp.json
backend/: .dockerignore  COMMANDS.md  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/database/: Dockerfile  README.md  init-typedb.sh
backend/database/schema/: .gitkeep  schema.tql  seed.tql
backend/tests/: __init__.py  test_main.py
bmad-agent/: ide-bmad-orchestrator.cfg.md
bmad-core/: core-config.yaml
bmad-core/agents/: sm.md
bmad-core/checklists/: story-dod-checklist.md  story-draft-checklist.md
bmad-core/tasks/: brownfield-create-epic.md  nfr-assess.md  qa-gate.md  review-story.md  trace-requirements.md
bmad-core/templates/: story-tmpl.yaml
bmad-core/workflows/: brownfield-fullstack.yaml  brownfield-ui.yaml  greenfield-fullstack.yaml  greenfield-service.yaml
docs/: Research Version Control Systems for Knowledge Graphs Using TypeDB.md  User-Stories-Acceptance-Criteria-Deliverables.md  architectural-validation-report.md  docker-setup.md  frontend-implementation-tips.md  knowledge-graph-wiki-prd.md  knowledge-graph-wiki-project-brief.md  knowledge-graph-wiki-tool-prd.md  knowledge-graph-wiki-ui-ux-spec.md
docs/architecture/: architecture-combined.md  authentik-integration.md  change-log.md  coding-standards.md  components.md  data-models.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  next-steps.md  rest-api-specification.md  security.md  source-tree.md  starter-template-or-existing-project.md  tech-stack.md  testing-strategy.md
docs/frontend-architecture/: change-log.md  component-architecture-and-ui-design.md  frontend-technology-stack.md  frontend-testing-and-build-strategies.md  high-level-frontend-architecture.md  index.md  real-time-collaboration-integration.md  starter-template-or-existing-project.md  state-management-and-data-flow.md
docs/prd/: change-log.md  checklist-results-report.md  epic-overview.md  functional-requirements-mvp.md  goal-objective-and-context.md  index.md  initial-architect-prompt.md  key-reference-documents.md  non-functional-requirements-mvp.md  optional-for-simplified-pm-to-development-workflow-only-core-technical-decisions-application-structure.md  out-of-scope-ideas-post-mvp.md  (+4 more)
frontend/: .dockerignore  .editorconfig  .env.example  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
github-projectbord-mirror/: README.md
project-planning/: CONSOLIDATION-PLAN.md  CONTENT-MAPPING-MATRIX.md  EPIC-1-2-GITHUB-STRUCTURE-ANALYSIS.md  EPIC-1-2-SUBISSUE-CONVERSION-PLAN.md  EPIC-1-2-SUBISSUE-SUCCESS-REPORT.md  EPIC-2-COMPLETION-PLAN.md  GITHUB-BULK-UPLOAD-PREP.md  GITHUB-CONSOLIDATION-ACTIONPLAN.md  GITHUB-STATE-ANALYSIS.md  GITHUB-SUBISSUES-CAPABILITY-ANALYSIS.md  IMMEDIATE-ACTION-STEPS.md  PROJECTBORD-ORGANISATIE-VOORSTEL.md  README.md  SUBISSUE-LINKING-CHECKLIST.md
(+115 files in other folders)
