[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.117",
    "uvicorn[standard]",
]

[project.scripts]
start = "uvicorn app.main:app --reload"

[project.scripts]
start = "uvicorn app.main:app --reload"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
